<resources>
    <string name="app_name">osuhub</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="feed">Feed</string>
    <string name="list">Players list</string>
    <string name="default_diff">23</string>
    <string name="default_rank">1</string>
    <string name="default_username">Cookiezi</string>
    <string name="default_pp">14000</string>
    <string name="default_acc">98.78</string>
    <string name="default_pc">23000</string>

    <string name="follow">Follow</string>
    <string name="following">Following</string>

    <string name="title_activity_beatmap">BeatmapActivity</string>
    <string name="no_more_load_retry" />
    <string name="endless_cancel">Cancelled</string>
    <string name="endless_error">error loading</string>
    <string name="endless_disabled">disabled</string>
    <string name="app_label">osu!hub</string>
    <string name="search_hint">Search Player</string>
    <string name="search">Search</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="sorting_dialog_title">Get mods scoreboard</string>
    <string name="mods_accept">Sort</string>
    <string name="player_overview">Overview</string>
    <string name="player_recent">Recent scores</string>
    <string name="player_top">Top scores</string>
    <string name="clear">clear</string>
</resources>
