<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/rank"
        android:layout_width="40dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_rank_arrow"
            android:layout_width="8dp"
            android:layout_height="10dp"
            android:layout_alignBottom="@+id/item_rank"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/item_hash"
            android:src="@drawable/arrow_up"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/item_rank_difference"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_rank_difference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/item_rank"
            android:layout_toEndOf="@+id/item_rank"
            android:text="@string/default_diff"
            android:textColor="@color/textColorHighlight"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/item_rank"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/default_rank"
            android:textColor="@color/textColorHighlight"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/item_acc"
            app:layout_constraintTop_toTopOf="parent" />



    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/username"
        android:layout_width="120dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_country_image"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/item_username"
            android:adjustViewBounds="false"
            android:alpha=".9"
            android:cropToPadding="true"
            android:paddingEnd="5dp"
            android:paddingStart="0dp"
            android:src="@drawable/kr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/item_username"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|right"
            android:text="@string/default_username"
            android:textColor="@color/usernameColor"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/item_country_image"
            app:layout_constraintTop_toTopOf="parent" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/star_rate"
        android:layout_width="65dp"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_pp_arrow"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_alignBottom="@+id/item_pp_difference"
            android:layout_below="@+id/item_pp"
            android:layout_toStartOf="@+id/item_pp_difference"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:src="@drawable/arrow_up"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/item_pp_difference" />

        <TextView
            android:id="@+id/item_pp_difference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/item_pp"
            android:layout_below="@+id/item_pp"
            android:text="@string/default_diff"
            android:textColor="@color/defaultTextColor"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/item_pp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/default_pp"
            android:textColor="@color/textColorHighlight"
            android:textSize="14sp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/acc"
        android:layout_width="65dp"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_weight="1"
            android:text="@string/default_acc"
            android:textColor="@color/defaultTextColor"
            android:textSize="14sp"
            tools:layout_editor_absoluteX="179dp"
            tools:layout_editor_absoluteY="21dp" />

        <TextView
            android:id="@+id/item_acc_difference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/item_acc"
            android:layout_below="@+id/item_acc"
            android:layout_weight="1"
            android:text="@string/default_diff"
            android:textColor="@color/defaultTextColor"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@+id/item_acc" />

        <ImageView
            android:id="@+id/item_acc_arrow"
            android:layout_width="10dp"
            android:layout_height="14dp"
            android:layout_below="@+id/item_acc"
            android:layout_toStartOf="@+id/item_acc_difference"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:src="@drawable/arrow_up"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/item_acc_difference"
            app:layout_constraintTop_toBottomOf="@+id/item_acc" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/pc"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/item_pc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/default_pc"
            android:textColor="@color/defaultTextColor"
            tools:text="@string/default_pc" />

        <TextView
            android:id="@+id/item_pc_difference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/item_pc"
            android:layout_below="@+id/item_pc"
            android:layout_weight="1"
            android:text="@string/default_diff"
            android:textColor="@color/defaultTextColor"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/item_rank"
            app:layout_constraintTop_toBottomOf="@+id/item_acc" />

        <ImageView
            android:id="@+id/item_pc_arrow"
            android:layout_width="10dp"
            android:layout_height="14dp"
            android:layout_below="@+id/item_pc"
            android:layout_toStartOf="@+id/item_pc_difference"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:cropToPadding="true"
            android:src="@drawable/arrow_up"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/item_acc_difference"
            app:layout_constraintTop_toBottomOf="@+id/item_acc" />

    </RelativeLayout>

</LinearLayout>